# icp-slam-prototype

./: .gitignore  .~lock.D1.csv#  .~lock.D1.ods#  CMakeCache.txt  CMakeLists.txt  Compilation Steps.txt  D1.csv  D1.ods  D1_1.csv  D1_20000_uniform_16.csv  D1_unfiltered.csv  D1_uniform_32.csv  Experimentation Results.txt  Fixed.hpp  H1.csv  Makefile  README.md  SLAM.cbp  SLAM.cpp  SLAM.hpp  TODO  cmake_install.cmake  icp.cpp  icp.hpp  map.cpp  map.hpp  old_pointcloud_code.txt  pcl-icp.cpp  pointcloud.cpp  pointcloud.hpp  priority.sh  quaternion.cpp  quaternion.hpp  rigid_transform_3D.py
raw-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  SLAM.exe.vcxproj  SLAM.exe.vcxproj.filters  SLAM.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  log.txt
raw-build/SLAM.exe.dir/RelWithDebInfo/SLAM.exe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SLAM.exe.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
